[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my-package"  # ðŸ” use kebab-case for PyPI
version = "0.1.0"
description = "A simple Python package example"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
authors = [{ name = "boopathiraj", email = "boopathiraj.aideveloper@gmail.com" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["numpy","spacy",
"datasets",
"tqdm",
"pandas"]

[project.urls]
Homepage = "https://github.com/rajboopathiking/NER_DATA_PREPROCESSING"
Repository = "https://github.com/rajboopathiking/NER_DATA_PREPROCESSING"
